# High-DOF-Planner

./: CMakeLists.txt  README.md
build_stale_oldpath/: CMakeCache.txt  Makefile  cmake_install.cmake  planner  verifier
include/planners/: planner_api.h
output/: myOutput.txt
output/grader_out/: grader_results.csv  tmp.txt
output/report_benchmark/seedset_16782/map1/: all_runs.csv  random_pairs.csv  summary.csv  summary.md
output/report_benchmark/seedset_16782/map1/prm/: pair_00_path.txt  pair_00_stats.csv  pair_01_path.txt  pair_08_path.txt  pair_09_path.txt  pair_10_path.txt  pair_10_stats.csv  pair_11_path.txt  pair_11_stats.csv  pair_14_path.txt  pair_14_stats.csv  pair_16_path.txt  pair_16_stats.csv  pair_17_path.txt  pair_18_path.txt  pair_18_stats.csv  pair_19_path.txt  pair_19_stats.csv  results.csv
output/report_benchmark/seedset_16782/map1/rrt/: pair_00_path.txt  pair_00_stats.csv  pair_03_path.txt  pair_05_path.txt  pair_06_path.txt  pair_09_stats.csv  pair_10_path.txt  pair_10_stats.csv  pair_11_path.txt  pair_11_stats.csv  pair_16_path.txt  pair_16_stats.csv  pair_18_path.txt  pair_18_stats.csv  pair_19_path.txt  results.csv  (+1 more)
output/report_benchmark/seedset_16782/map2/: all_runs.csv  random_pairs.csv  summary.csv  summary.md
scripts/: benchmark_planners.py  build_readme_comparison_gifs.py  grader.py  render_arm_map_motion.py  render_arm_motion_panel.py  render_benchmark_visualizations.py  visualizer.py
src/: planner.cpp  verifier.cpp
src/planners/: prm.cpp  rrt.cpp  rrt_connect.cpp  rrt_star.cpp
utils/: planning_common.cpp  planning_common.h
(+498 files in other folders)
